update sdk path

--- a/blog/code/2022-02-25-data-from-mic-macos/Makefile
+++ b/blog/code/2022-02-25-data-from-mic-macos/Makefile
@@ -1,4 +1,5 @@
 build:
-	clang++ main.cpp -isysroot /Applications/Xcode.app/Contents/Developer/Platforms/MacOSX.platform/Developer/SDKs/MacOSX12.1.sdk --std=c++17 -framework CoreAudio -framework AudioToolbox
+	/* Find latest version via xcodebuild -sdk -version */
+	clang++ main.cpp -isysroot /Applications/Xcode.app/Contents/Developer/Platforms/MacOSX.platform/Developer/SDKs/MacOSX12.3.sdk --std=c++17 -framework CoreAudio -framework AudioToolbox
 clean:
 	rm a.out samples.csv
