--- a/_config.yml
+++ b/_config.yml
@@ -6,6 +6,7 @@ collections:
     output: true
 plugins:
   - jekyll-feed
+  - jekyll-seo-tag
 title: NP-Incompleteness
 description: Kunigami's Technical Blog
 author: Guilherme Kunigami
