add book review: Letters from a Stoic

--- a/_config.yml
+++ b/_config.yml
@@ -4,6 +4,8 @@ collections:
     output: true
   amuseum:
     output: true
+  books:
+    output: true
 plugins:
   - jekyll-feed
   - jekyll-seo-tag
