--- a/_config.yml
+++ b/_config.yml
@@ -12,4 +12,4 @@ plugins:
 title: NP-Incompleteness
 description: Kunigami's Technical Blog
 author: Guilherme Kunigami
-url: "https://www.kuniga.me/"
+url: "https://www.kuniga.me"
